--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -46,11 +46,12 @@
                                 </div>
                             </li>
                         </ul>
-
+                        <!-- 订单记录 -->
                         <ul>
                             <li>
                                 <div class="cart_table">
                                     <div class="profile_new_title"><a href="">{{ translation.PROFILE_ORDER_UNPAIED }}</a><a href="">{{ translation.PROFILE_ORDER_UNFINISHED }}</a><a class="on" href="">{{ translation.PROFILE_ORDER_FINISHED }}</a></div>
+                                    <h3>Voucher Shopping History</h3>
                                     <table id="orderTable" class="responsive" valign="middle">
                                         <thead>
                                         <tr>
@@ -62,6 +63,21 @@
                                         <tbody>
                                         </tbody>
                                     </table>
+
+                                    <hr>
+                                    <h3>ETH Shopping History</h3>
+                                    <table id="ethOrderTable" class="responsive" valign="middle">
+                                        <thead>
+                                            <tr>
+                                                <th></th>
+                                                <th>TX Hash</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            
+                                        </tbody>
+                                    </table>
+                                    
                                 </div>
                             </li>
                         </ul>
