--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -183,7 +183,7 @@
                     <p>A secure wallet like MetaMask is the perfect place to be.</p>
                     <p>You can also enter the game through your wallet (no extra password required)</p>
                 </div>
-                <a class="money_but" href="https://chrome.google.com/webstore/detail/metamask/nkbihfbeogaeaoehlefnkodbefgpgknn?hl=en">从Chrome网上商店获取</a>
+                <a class="money_but" href="https://chrome.google.com/webstore/detail/metamask/nkbihfbeogaeaoehlefnkodbefgpgknn?hl=en">Get from the chrome online store</a>
                 <div class="tips">This feature is only suitable for use on non-mobile terminals</div>
             </div>
         <a href="#0" class="cd-popup-close">X</a>
