--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -62,7 +62,7 @@
                         <button id="btnSignUp" class="btn ">{{ translation.SIGNUP_REGISTER }}</button>
                     </div>
                     <div class="login_bottom">
-                      已有账号，
+                      Already have an account,
                         <a class="" href="/signin">{{ translation.SIGNUP_LGOIN }}</a>
                         <!--<a class="" href="/forgot-password">{{ translation.FORGET_PASSWORD }}</a>-->
                     </div>
