--- a/views/提示安装.html
+++ b/views/提示安装.html
@@ -57,22 +57,22 @@
                     <!--begin nav -->
                     <ul id="nav">
                         <li>
-                            <a href="index.html">首页</a>
+                            <a href="index.html">Home</a>
                         </li>
                         <li>
-                            <a href="">矿机</a>
+                            <a href="">Miner</a>
                         </li>
                         <li>
-                            <a href="index.html#showcase">应用场景</a>
+                            <a href="index.html#showcase">Applications</a>
                         </li>
                         <li>
-                            <a href="https://github.com/DescartesChain">技术资源</a>
+                            <a href="https://github.com/DescartesChain">Technology</a>
                         </li>
                         <li>
-                            <a href="index.html#features">发展规划</a>
+                            <a href="index.html#features">Roamap</a>
                         </li>
                         <li>
-                            <a href="index.html#pricing">团队</a>
+                            <a href="index.html#pricing">Team</a>
                         </li>
                         <li id="i18n"><a href="minerEn.html"> En </a></li>
                         <!--<li class="last">
