--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -41,21 +41,21 @@
                     
                 
                     <div class="vali">
-                        <input type="text" id="username" name="" value="111111" class="uersname" placeholder="{{ translation.SIGNUP_USERNAME }}">
+                        <input type="text" id="username" name="" value="" class="uersname" placeholder="{{ translation.SIGNUP_USERNAME }}">
                     </div>
             
                     <div class="vali">
-                        <input type="text" id="phone" name="" value="18439535112" placeholder="{{ translation.SIGNUP_PHONE }}" class="phone">
+                        <input type="text" id="phone" name="" value="" placeholder="{{ translation.SIGNUP_PHONE }}" class="phone">
                     </div>
               
                     <div class="vali">
-                        <input type="password" name="" value="aaaaaaaaa" placeholder="{{ translation.SIGNUP_PASSWORD }}" class="pasw" id="password">
+                        <input type="password" name="" value="" placeholder="{{ translation.SIGNUP_PASSWORD }}" class="pasw" id="password">
                     </div>
                     <div class="vali">
-                        <input type="password" name="" value="aaaaaaaaa" placeholder="{{ translation.SIGNUP_CONFIRM_PASSWORD }}" id="confirmPassword" class="pasws">
+                        <input type="password" name="" value="" placeholder="{{ translation.SIGNUP_CONFIRM_PASSWORD }}" id="confirmPassword" class="pasws">
                     </div>
                     <div class="vali">
-                        <input  id="email" type="text" name="1105044226@qq.com" value="" class="eal" placeholder="{{ translation.SIGNUP_EMAIL }}">
+                        <input  id="email" type="text" name="" value="" class="eal" placeholder="{{ translation.SIGNUP_EMAIL }}">
                     </div>
                     <h3 style="color:red;text-align:left;display:none" id="judgeUser"></h3>
                     <div class="submit">
