--- a/views/确认支付页面.html
+++ b/views/确认支付页面.html
@@ -72,7 +72,7 @@
                             <a href="index.html#features">发展规划</a>
                         </li>
                         <li>
-                            <a href="index.html#pricing">团队</a>
+                            <a href="index.html#pricing">合作伙伴</a>
                         </li>
                         <li id="i18n"><a href="minerEn.html"> En </a></li>
                         <!--<li class="last">
