--- a/views/确认支付成功页面.html
+++ b/views/确认支付成功页面.html
@@ -66,7 +66,7 @@
                             <a href="index.html#showcase">应用场景</a>
                         </li>
                         <li>
-                            <a href="https://github.com/DescartesChain">技术资源</a>
+                            <a href="https://github.com/DescartesChain">技术</a>
                         </li>
                         <li>
                             <a href="index.html#features">发展规划</a>
