--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -216,5 +216,7 @@
     <!-- Custom scripts for this page-->
     <script src="js/pages/orders.min.js"></script>
   {{/inline}}
+  
+  <!--injector-->
 
 {{/layouts/admin_base}}
