--- a/views/admin/dashboard.hbs
+++ b/views/admin/dashboard.hbs
@@ -317,6 +317,7 @@
             </div>
             <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
           </div>
+          <!-- end-->
           <!-- Example Notifications Card-->
           <div class="card mb-3">
             <div class="card-header">
